--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  simple_deployment_pipeline:
+  deployment_pipeline:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v4
@@ -16,9 +16,22 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
       - name: Check style
         run: npm run eslint
+
       - name: Build app
         run: npm run build
-      - name: Testing
+
+      - name: Run unit tests
         run: npm run test
+
+      - name: Start app for E2E tests
+        run: npm run start &
+        env:
+          NODE_ENV: development
+
+      - name: Run E2E tests
+        run: npm run test:e2e
+        env:
+          CI: true
