--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -37,7 +37,7 @@ jobs:
           CI: true
 
       - name: Run Playwright tests
-        run: npx playwright test
+        run: npx playwright test --list
 
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
