--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,9 +46,10 @@ jobs:
           path: playwright-report/
           retention-days: 30
       
-      - name: Render Deployment
-        uses: sws2apps/render-deployment@v1.8.0
-
-      - name: Trigger deployment
-        run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
-            
+       - name: Deploy to Render
+        if: ${{ github.event_name == 'push' }}
+        uses: sws2apps/render-deployment@main
+        with:
+          serviceId: ${{ secrets.RENDER_SERVICE_ID }}
+          apiKey: ${{ secrets.RENDER_API_KEY }}
+          multipleDeployment: false #optional, default true           
