--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -24,11 +24,10 @@ jobs:
       - run: npm run build
       - name: Notify build failure
         if: failure()
-        uses: johnnyhuy/actions-discord-git-webhook@v1.0.1
-        with:
-          webhook_url: ${{ secrets.YOUR_DISCORD_WEBHOOK_URL }}
-          status: error
-          message: Build Failed!
+        run: |
+          curl -X POST -H "Content-Type: application/json" \
+          -d '{"content": "🚨 Build Failed for PR #${{ github.event.pull_request.number }} by ${{ github.actor }}"}' \
+          ${{ secrets.YOUR_DISCORD_WEBHOOK_URL }}
       - run: npm run test
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
@@ -49,24 +48,33 @@ jobs:
         run: npm run build
       - name: Notify build failure
         if: failure()
-        uses: johnnyhuy/actions-discord-git-webhook@v1.0.1
-        with:
-          webhook_url: ${{ secrets.YOUR_DISCORD_WEBHOOK_URL }}
-          status: error
-          message: Build Failed!
+        run: |
+          curl -X POST -H "Content-Type: application/json" \
+          -d '{"content": "🚨 Build Failed for PR #${{ github.event.pull_request.number }} by ${{ github.actor }}"}' \
+          ${{ secrets.YOUR_DISCORD_WEBHOOK_URL }}
       - name: Trigger deployment
         run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
       - name: Notify deployment success
         if: success()
-        uses: johnnyhuy/actions-discord-git-webhook@v1.0.1
-        with:
-          webhook_url: ${{ secrets.YOUR_DISCORD_WEBHOOK_URL }}
-          status: success
-          message: Deployment Successful!
+        run: |
+          curl -X POST -H "Content-Type: application/json" \
+          -d '{"content": "✅ Deployment Successful on Push by ${{ github.actor }}"}' \
+          ${{ secrets.YOUR_DISCORD_WEBHOOK_URL }}
       - name: Notify deployment failure
         if: failure()
-        uses: johnnyhuy/actions-discord-git-webhook@v1.0.1
-        with:
-          webhook_url: ${{ secrets.YOUR_DISCORD_WEBHOOK_URL }}
-          status: error
-          message: Deployment Failed!
+        run: |
+          curl -X POST -H "Content-Type: application/json" \
+          -d '{"content": "🚨 Deployment Failed on Push by ${{ github.actor }}"}' \
+          ${{ secrets.YOUR_DISCORD_WEBHOOK_URL }}
+
+  tag_release:
+    needs: [deployment_pipeline]
+    runs-on: ubuntu-20.04
+    steps:
+      - uses: actions/checkout@v4
+      - name: Bump version and push tag
+        if: ${{ github.event_name == 'push' && !contains(join(toJson(github.event.commits.*.message)), '#skip') }}
+        uses: anothrNick/github-tag-action@1.71.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          DEFAULT_BUMP: patch
