--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -54,6 +54,10 @@ jobs:
           ${{ secrets.YOUR_DISCORD_WEBHOOK_URL }}
       - name: Trigger deployment
         run: curl https://api.render.com/deploy/srv-${{ secrets.RENDER_SERVICE_ID }}?key=${{ secrets.RENDER_API_KEY }}
+      - name: Check the deployed service URL
+        uses: jtalk/url-health-check-action@v4
+        with:
+          url: https://full-stack-open-pokedex-jq9u.onrender.com/health
       - name: Notify deployment success
         if: success()
         run: |
